# src/controllers/index.ts
@@ -1,3 +1,4 @@
 export * as adminControllers from "./admin.controllers";
 export * as vendorControllers from "./vendor.controllers";
 export * as shoppingControllers from "./shopping.controllers";
+export * as customerControllers from "./customer.controllers";
