# src/dto/index.ts
@@ -1,3 +1,4 @@
 export * as vendorDto from "./vendor.dto";
 export * as authDto from "./auth.dto";
 export * as foodDto from "./food.dto";
+export * as customerDto from "./customer.dto";
