# src/models/index.ts
@@ -1,2 +1,4 @@
 export * from "./vendor.model";
 export * from "./food.model";
+export * from "./customer.model";
+export * from "./order.model";
