# src/routes/index.ts
@@ -1,3 +1,4 @@
 export * from "./admin.routes";
 export * from "./vendor.routes";
 export * from "./shopping.routes";
+export * from "./customer.routes";
